@@ -3,26 +3,17 @@ package com.rainng.jerry.mouse.util;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 public class UrlEncoding {
     public static String Encode(String s) {
-        try {
-            return URLEncoder.encode(s, "UTF-8");
+        return URLEncoder.encode(s, StandardCharsets.UTF_8);
 
-        } catch (UnsupportedEncodingException ex) {
-            ex.printStackTrace();
-            return s;
-        }
     }
 
 
     public static String Decode(String s) {
-        try {
-            return URLDecoder.decode(s, "UTF-8");
+        return URLDecoder.decode(s, StandardCharsets.UTF_8);
 
-        } catch (UnsupportedEncodingException ex) {
-            ex.printStackTrace();
-            return s;
-        }
     }
 }
